--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="status">
                 <p id="statusText">Ready to play</p>
                 <div class="social-links">
-                    <a href="https://vk.com/reklama_novgorod" target="_blank" class="social-link">
+                    <a href="#" target="_blank" class="social-link">
                         <i class="fab fa-vk"></i>
                     </a>
                 </div>
